need to fix vertical alignment of text next to the rainbow icons

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 
 .icon{
   width: 25px;
-  src: "https://img.icons8.com/nolan/64/000000/school.png"
+  height: 100%;
 }
 
 h1 {
